# diffusion2D

./: README.md  setup.cfg
mamoyn_diffusion2d/: diffusion2d.py  output.py
