[metadata]
name = mamoyn_diffusion2d
version = 0.0.1
author = Yonatan Mamo
author_email = girmayonatan86@gmail.com
description = A Python package to solve the 2D diffusion equation, designed for Simulation Software Engineering.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Simulation-Software-Engineering/diffusion2D
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Intended Audience :: Education
    Intended Audience :: Developers
    Environment :: Console

[options]
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    matplotlib

[options.entry_points]
console_scripts =
    solve = mamoyn_diffusion2d.diffusion2d:solve
